--- a/app/src/main/res/drawable/shape_radius.xml
+++ b/app/src/main/res/drawable/shape_radius.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:color="@color/colorRed"
+        android:color="
+#333000"
         android:width="2.5dp"></stroke>
     <corners android:radius="50dp"/>
 </shape>
