--- a/app/src/main/res/layout/my_music.xml
+++ b/app/src/main/res/layout/my_music.xml
@@ -3,101 +3,71 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_main"
+    android:background="@drawable/bk2"
    >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/ic_con"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="170dp"
-            android:layout_marginLeft="170dp"
-            android:layout_marginTop="81dp"
-            android:src="@drawable/ic_icon" />
 
         <Button
             android:id="@+id/ic_qq"
-            android:layout_width="58dp"
-            android:layout_height="61dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
+            android:layout_width="75dp"
+            android:layout_height="74dp"
+            android:layout_alignParentEnd="true"
+
+            android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="129dp"
-            android:layout_marginLeft="129dp"
-            android:layout_marginBottom="69dp"
+
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="107dp"
+            android:layout_marginRight="107dp"
+            android:layout_marginBottom="493dp"
             android:background="@drawable/ic_qq" />
 
-        <Button
-            android:id="@+id/ic_wb"
-            android:layout_width="58dp"
-            android:layout_height="61dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="218dp"
-            android:layout_marginLeft="218dp"
-            android:layout_marginBottom="70dp"
-            android:background="@drawable/ic_wb" />
 
         <Button
             android:id="@+id/ic_wx"
-            android:layout_width="58dp"
-            android:layout_height="61dp"
+            android:layout_width="77dp"
+            android:layout_height="75dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="37dp"
-            android:layout_marginLeft="37dp"
-            android:layout_marginBottom="69dp"
+            android:layout_marginStart="101dp"
+            android:layout_marginLeft="101dp"
+            android:layout_marginBottom="492dp"
             android:background="@drawable/ic_wx" />
-
-        <Button
-            android:id="@+id/ic_wy"
-            android:layout_width="58dp"
-            android:layout_height="61dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="308dp"
-            android:layout_marginLeft="308dp"
-            android:layout_marginBottom="69dp"
-            android:background="@drawable/ic_wy" />
 
 
         <Button
             android:id="@+id/ic_log"
-            android:layout_width="280dp"
-            android:layout_height="wrap_content"
+            android:layout_width="162dp"
+            android:layout_height="35dp"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="166dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="515dp"
             android:background="@drawable/shape_radius"
-            android:text="手机号登陆"
-            android:textColor="#CC0033"
+            android:text="我的课表"
+            android:textColor="#CCFFFF"
             android:textSize="28dp"></Button>
 
         <Button
             android:id="@+id/ic_reg"
-            android:layout_width="280dp"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="144dp"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="232dp"
-            android:background="@drawable/shape_radius"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="280dp"
+            android:layout_marginEnd="14dp"
+            android:layout_marginRight="14dp"
+            android:background="@drawable/shape_1"
             android:gravity="center"
-            android:text="注册"
-            android:textColor="#CC0033"
+            android:text="重邮地图"
+            android:textColor="#CCFFFF"
             android:textSize="28dp" />
-
-
-
 
 
     </RelativeLayout>
